Closed Bug 912555 Opened 11 years ago Closed 11 years ago

DOMSVGPathSeg and subclasses don't need to inherit nsISupports

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: dzbarsky, Assigned: dzbarsky)

Details

Attachments

(1 file)

      No description provided.
Attached patch PatchSplinter Review
Assignee: nobody → dzbarsky
Status: NEW → ASSIGNED
Attachment #799559 - Flags: review?(Ms2ger)
Comment on attachment 799559 [details] [diff] [review]
Patch

Review of attachment 799559 [details] [diff] [review]:
-----------------------------------------------------------------

lgtm
Attachment #799559 - Flags: review?(Ms2ger) → review+
https://hg.mozilla.org/mozilla-central/rev/708477a47e25
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: