Bug 912555 - DOMSVGPathSeg and subclasses don't need to inherit nsISupports r=Ms2ger